<resources>
    <string name="app_name">HomeFit</string>
    <string name="categories_title">Categories</string>
    <string name="calendar_title">Calendar</string>
    <string name="toolbar_title_leg_exercises">Leg Exercises</string>
    <string name="toolbar_title_core_exercises">Core Exercises</string>
    <string name="toolbar_title_chest">Chest Exercises</string>
    <string name="toolbar_title_back">Back Exercises</string>
    <string name="toolbar_title_arms">Arms Exercises</string>
    <string name="exercise_squats">Squats</string>
    <string name="exercise_split_squats">Split Squats</string>
    <string name="exercise_glute_bridge">Glute Bridge</string>
    <string name="exercise_side_lunge">Side Lunge</string>
    <string name="exercise_calf_raises">Calf Raises</string>
    <string name="exercise_plank">Plank</string>
    <string name="exercise_crunches">Crunches</string>
    <string name="exercise_bicycle_crunches">Bicycle Crunches</string>
    <string name="exercise_leg_raises">Leg Raises</string>
    <string name="exercise_heel_taps">Heel Taps</string>
    <string name="exercise_pushups">Push-ups</string>
    <string name="exercise_wide_pushups">Wide Push-ups</string>
    <string name="exercise_burpees">Burpees</string>
    <string name="exercise_incline_pushups">Incline Push-ups</string>
    <string name="exercise_decline_pushups">Decline Push-ups</string>
    <string name="exercise_superman">Superman</string>
    <string name="exercise_good_morning">Good Morning</string>
    <string name="exercise_reverse_plank">Reverse Plank</string>
    <string name="exercise_cat_cow">Cat Cow</string>
    <string name="exercise_reverse_flys">Reverse Flys</string>
    <string name="exercise_chair_dips">Chair Dips</string>
    <string name="exercise_arm_circles">Arm Circles</string>
    <string name="exercise_chautaranga_pushups">Chautaranga Push-ups</string>
    <string name="exercise_wall_angels">Wall Angels</string>
    <string name="exercise_arm_lateral_raises">Arm Lateral Raises</string>
    <string name="description_chair_dips">1.Sit on the edge of a bench or chair, hands supporting your weight. \n2.Position your feet away from the bench, legs straight and heels on the floor. \n3.Lower yourself until your upper arms are parallel to the ground, then push back up.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_arm_circles">1.Stand up straight, with your feet shoulder-width apart and your hands out and parallel to the floor.\n2.Make small circles using your whole arm, being sure to keep your back straight.\n3.Start making larger circles with your arm, keeping your movement controlled.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_chaturanga">1.Start in a high plank with shoulders over wrists, hips aligned, and legs straight. Inhale, shift forward on toes, and engage your core. \n2.Lower down by bending elbows to 90°, keeping chest and hips aligned. \n3.Exhale, press palms to lift chest and hips, straightening your arms.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_wall_angels">1.Stand tall with your back against a wall and feet slightly forward. \n2.Place the backs of your hands and arms against the wall at head height. \n3.Slide your arms up, then back down to the starting position.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_arm_lateral_raises">1.Stand tall with your feet shoulder-width apart, knees slightly bent. Let your arms hang naturally by your sides with your palms facing your body.\n2.Engage your core muscles and maintain a slight bend in your elbows throughout the exercise.\n3.Keeping your back straight and your shoulders relaxed, lift both arms out to the sides until they are parallel to the floor.\n4.Focus on using your shoulder muscles to perform the movement, rather than relying on momentum or swinging your body.\n5.Pause for a moment at the top of the movement, feeling the contraction in your shoulder muscles.\n6.Inhale and slowly lower your arms back down to the starting position, controlling the descent.\n\nContinue for the desired number of repetitions.</string>
    <string name="description_squats">1.Start by standing with your feet just about shoulder width\n2.Begin by pushing your hips back while bending at the knee, as if you were about to sit down.\n3.Squat down until your thighs are at least parallel with the floor, or below if you can.\n4.Return to standing by pushing the ground away through your feet, making sure to push through both the whole foot and not just the heels.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_split_squats">1.Stand with your feet hip-width apart and take a big step forward with your right foot.\n2.Lower your body down until your right thigh is parallel to the ground and your left knee is hovering just above the floor.\n3.Push through your right heel to stand back up to the starting position.\n4.Repeat on the other side by taking a big step forward with your left foot.\n\nContinue alternating legs for the desired number of reps or time.</string>
    <string name="description_glute_bridge">1.Start by lying on your back on a mat or bench with your knees bent and feet flat on the ground.\n2.Engage your glutes and lift your hips up towards the ceiling, keeping your feet and shoulders on the ground.\n3.Pause at the top of the movement, squeezing your glutes tightly.\n4.Lower your hips back down to the starting position, but do not let the barbell touch the ground.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_side_lunge">1.Stand with your feet hip-width apart and your hands on your hips.\n2.Take a big step to the right with your right foot, keeping your left foot in place.\n3.Bend your right knee and push your hips back as you lower your body into a lunge position.\n4.Make sure your right knee is directly above your ankle and your left leg is straight.\n5.Push off with your right foot and return to the starting position.\n6.Repeat on the other side by stepping to the left with your left foot.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_calf_raises">1.Stand on an flat or elevated surface such as a step with your heels hanging off.\n2.Hold onto a stable object such as a railing or wall for balance.\n3.Raise your heels up as high as possible, squeezing your calf muscles at the top of the movement.\n4.Lower your heels back down below the level of the elevated surface, feeling a stretch in your calves.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_push_ups">1.Start in a high plank position. Place your hands on the ground and position them shoulder width apart (or slightly wider).\n2.With control, bend your elbows to lower your entire body toward the ground.\n3.Lower as far as you can while keeping your body in one straight line.\n4.Pause at the bottom.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_wide_push_ups">1.Start in plank position with your hands wider than your shoulders. \n2.Face your fingers forward or slightly to the outside. \n3.Slowly bend your elbows out to the side as you lower your body toward the floor. \n4.Pause when your chest is just below your elbows.\n5.Push up to the starting position.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_burpees">1.Begin in a standing position. Position your feet shoulder-width apart.\n2.Drop into a squat.\n3.Kick your legs back into a high plank position.\n4.Lower toward the ground.\n5.Rise back to high plank.\n6.Return to a squat position.\n7.Jump!\n\nContinue for the desired number of reps or time.</string>
    <string name="description_incline_push_ups">1.Perform the incline push-up with your hands on a bench, countertop, stability ball, or other elevated surface. \n2.Hold your body in a high plank position, keeping your back and legs in a straight line. \n3.Bend your elbows, and lower your body with the same movement pattern you would use for a traditional push-up.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_decline_push_ups">1.Kneel down with your back to the bench. Put your hands on the floor, shoulders over your wrists and elbows at 45 degrees. Place your feet on top of the bench.\n2.Brace your core, glutes, and quads. Bend your elbows and lower your chest to the floor, keeping your back and neck straight.\n3.Push into the floor to return to starting position, extending your elbows.\n\nContinue for the desired number of reps or time.</string>
    <string name="description_superman">1.Lie on the floor face down, with your legs straight and your arms extended in front of you.\n2.Keeping your head in a neutral position, slowly lift your arms and legs off the floor until you feel your lower back muscles contracting. \n3.Aim to lift your belly button slightly off the floor to contract your abs. A good way to picture this is to imagine you’re Superman flying in the air.\n4.Hold this position for 2–3 seconds. breathing the entire time.\n5.Lower your arms, legs, and belly back to the floor. \n\nContinue for the desired number of reps or time.</string>
    <string name="description_good_morning">1.With feet hip-width apart, stand upright, knees slightly bent, and place your hands at the back of your head, elbows opened wide.\n2.Engage your abdominal muscles by pulling them into your spine. Keeping your spine neutral and pressing your rear backward, bend forward at the hips and continue doing so until your back is nearly parallel to the floor.\n3.Slowly return to standing, engaging your core and squeezing your glutes at the top of the movement. \n\nContinue for the desired number of reps or time.</string>
    <string name="description_reverse_plank">1.Start by sitting on the floor with your legs extended in front of you.\n2.Place your hands on the floor behind you, with your fingers pointing towards your feet.\n3.Press into your hands and lift your hips off the ground, coming into a reverse tabletop position.\n4.Extend your legs out straight and engage your core to lift your hips higher.\n5.Hold the pose while breathing deeply.\n6.To release, lower your hips back down to the ground and come back into a seated position.\n\nContinue for the desired number of reps or time.</string>
    <string name="welcome_message_journey">Your Fitness Journey Begins</string>
    <string name="welcome_message_with">with</string>
    <string name="welcome_message_homefit">HomeFit</string>
    <string name="username_input">Full Name</string>
    <string name="user_email_input">Email</string>
    <string name="user_signup_buttontext">Sign Up</string>
    <string name="user_signin_buttontext">Sign In</string>
    <string name="user_forgot_password_linktext">Forgot Password?</string>
    <string name="user_reset_password_buttontext">Reset Password</string>
    <string name="user_back_to_sign_in_linktext">Back to Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="tap_the_screen_to_continue">Tap the Screen to Continue</string>
    <string name="profile_name_hint">Your Name</string>
    <string name="profile_age_hint">Age</string>
    <string name="profile_weight_hint">Weight (kg)</string>
    <string name="profile_goal_hint">Goal (kg)</string>
    <string name="profile_gender_hint">Gender</string>
    <string name="save_profile_button">Save Profile</string>
    <string name="profile_length_hint">Length (cm)</string>
    <string name="workout_description">Workout description will go here...</string>
    <string name="workout_timer_start">Start</string>
    <string name="workout_timer_stop">Stop</string>
</resources>