<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.splash.SplashFragment">

    <!-- App Logo-->
    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView for Journey -->
    <TextView
        android:id="@+id/tvJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lancelot"
        android:text="@string/welcome_message_journey"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAppLogo" />

    <!-- TextView for with  -->
    <TextView
        android:id="@+id/tvWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lancelot"
        android:text="@string/welcome_message_with"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJourney" />

    <!-- TextView for HomeFit -->
    <TextView
        android:id="@+id/tvHomeFit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lancelot"
        android:text="@string/welcome_message_homefit"
        android:textColor="@color/blue"
        android:textSize="70sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWith" />

    <!-- TextView Tap screen to continue -->
    <TextView
        android:id="@+id/tvTapToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_the_screen_to_continue"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center" />

</androidx.constraintlayout.widget.ConstraintLayout>
